apps/monitoring/service-grafana.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
spec:
  selector:
    app: grafana
  ports:
    - port: 80
      targetPort: grafana-port
