apps/monitoring/service-prometheus.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
spec:
  selector:
    app: prometheus
  ports:
    - port: 80
      targetPort: prometheus-port
