apps/monitoring/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: monitor
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`playground.hefler.dev`) && PathPrefix(`/monitor`)
      observability:
        accessLogs: true
        metrics: true
        tracing: true
      services:
        - kind: Service
          name: grafana
          passHostHeader: true
          port: 3000
